[gd_scene load_steps=20 format=2]

[ext_resource path="res://HUD/lifes_icon.png" type="Texture" id=1]
[ext_resource path="res://HUD/hearts_hud.png" type="Texture" id=2]
[ext_resource path="res://HUD/lost_hearts_anim_strip_5.png" type="Texture" id=3]
[ext_resource path="res://HUD/no_hearts_hud.png" type="Texture" id=4]
[ext_resource path="res://HUD/health_menu_hud.png" type="Texture" id=5]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=6]
[ext_resource path="res://HUD/Number.tscn" type="PackedScene" id=7]
[ext_resource path="res://utils/Word.tscn" type="PackedScene" id=8]
[ext_resource path="res://HUD/coins_hud.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHUD" type="Sprite" parent="."]
position = Vector2( 20, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
centered = false

[node name="HealthBar" type="GridContainer" parent="MainHUD"]
margin_left = 26.0
margin_top = 5.0
margin_right = 68.0
margin_bottom = 15.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart0" type="AnimatedSprite" parent="MainHUD/HealthBar"]
position = Vector2( 5, 5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )

[node name="Heart1" type="AnimatedSprite" parent="MainHUD/HealthBar"]
position = Vector2( 15, 5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )

[node name="Heart2" type="AnimatedSprite" parent="MainHUD/HealthBar"]
position = Vector2( 25, 5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )

[node name="HighLife" type="Node2D" parent="MainHUD"]
position = Vector2( 4, 5 )

[node name="Sprite" type="Sprite" parent="MainHUD/HighLife"]
position = Vector2( 8.829, 6 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Number" parent="MainHUD/HighLife" instance=ExtResource( 7 )]
position = Vector2( 4.728, 14 )
scale = Vector2( 0.75, 0.75 )
frame = 0

[node name="Number2" parent="MainHUD/HighLife" instance=ExtResource( 7 )]
position = Vector2( 11.588, 14 )
scale = Vector2( 0.75, 0.75 )
frame = 0

[node name="GridContainer" type="GridContainer" parent="MainHUD"]
visible = false
margin_left = 4.0
margin_top = 5.0
margin_right = 21.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life0" type="AnimatedSprite" parent="MainHUD/GridContainer"]
position = Vector2( 0.5, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )
centered = false

[node name="Life1" type="AnimatedSprite" parent="MainHUD/GridContainer"]
position = Vector2( 8, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )
centered = false

[node name="Life2" type="AnimatedSprite" parent="MainHUD/GridContainer"]
position = Vector2( 0.5, 7 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )
centered = false

[node name="Life3" type="AnimatedSprite" parent="MainHUD/GridContainer"]
position = Vector2( 8, 7 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )
centered = false

[node name="Life4" type="AnimatedSprite" parent="MainHUD/GridContainer"]
position = Vector2( 0, 14 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )
centered = false

[node name="Life5" type="AnimatedSprite" parent="MainHUD/GridContainer"]
position = Vector2( 8, 14 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )
centered = false

[node name="Score" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="100000" parent="Score" instance=ExtResource( 7 )]
position = Vector2( 882, 15 )
scale = Vector2( 3, 3 )

[node name="10000" parent="Score/100000" instance=ExtResource( 7 )]
position = Vector2( 8, 0 )
scale = Vector2( 1, 1 )

[node name="1000" parent="Score/100000/10000" instance=ExtResource( 7 )]
position = Vector2( 8, 0 )
scale = Vector2( 1, 1 )

[node name="100" parent="Score/100000/10000/1000" instance=ExtResource( 7 )]
position = Vector2( 8, 0 )
scale = Vector2( 1, 1 )

[node name="10" parent="Score/100000/10000/1000/100" instance=ExtResource( 7 )]
position = Vector2( 8, 0 )
scale = Vector2( 1, 1 )

[node name="1" parent="Score/100000/10000/1000/100/10" instance=ExtResource( 7 )]
position = Vector2( 8, 0 )
scale = Vector2( 1, 1 )

[node name="Word" parent="Score" instance=ExtResource( 8 )]
position = Vector2( 764.578, 15.1467 )
word = "Score"

[node name="Cheater" parent="Score" instance=ExtResource( 8 )]
visible = false
position = Vector2( 936.52, 16.4096 )
word = "CHEATER"

[node name="Coins" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Coins"]
position = Vector2( 500, 17.68 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="coin10" parent="Coins/Sprite" instance=ExtResource( 7 )]
position = Vector2( 12, -1.5 )
scale = Vector2( 1.25, 1.25 )

[node name="coin1" parent="Coins/Sprite/coin10" instance=ExtResource( 7 )]
position = Vector2( 9, 0 )
scale = Vector2( 1, 1 )
